crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_array_literal.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 4,
  "items": [
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "uses_deprecated_var": false,
          "name": {
            "name": "arr",
            "span": {
              "start": 4,
              "end": 7,
              "file": "<test>"
            }
          },
          "type_ref": {
            "Array": [
              {
                "Named": [
                  "number",
                  {
                    "start": 9,
                    "end": 15,
                    "file": "<test>"
                  }
                ]
              },
              {
                "start": 9,
                "end": 17,
                "file": "<test>"
              }
            ]
          },
          "init": {
            "ArrayLiteral": {
              "elements": [
                {
                  "Literal": [
                    {
                      "Number": 1.0
                    },
                    {
                      "start": 21,
                      "end": 22,
                      "file": "<test>"
                    }
                  ]
                },
                {
                  "Literal": [
                    {
                      "Number": 2.0
                    },
                    {
                      "start": 24,
                      "end": 25,
                      "file": "<test>"
                    }
                  ]
                },
                {
                  "Literal": [
                    {
                      "Number": 3.0
                    },
                    {
                      "start": 27,
                      "end": 28,
                      "file": "<test>"
                    }
                  ]
                }
              ],
              "span": {
                "start": 20,
                "end": 29,
                "file": "<test>"
              }
            }
          },
          "span": {
            "start": 0,
            "end": 30,
            "file": "<test>"
          }
        }
      }
    }
  ]
}
