crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_boolean_literal.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 3,
  "items": [
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "uses_deprecated_var": false,
          "name": {
            "name": "flag",
            "span": {
              "start": 4,
              "end": 8,
              "file": "<test>"
            }
          },
          "type_ref": {
            "Named": [
              "bool",
              {
                "start": 10,
                "end": 14,
                "file": "<test>"
              }
            ]
          },
          "init": {
            "Literal": [
              {
                "Bool": true
              },
              {
                "start": 17,
                "end": 21,
                "file": "<test>"
              }
            ]
          },
          "span": {
            "start": 0,
            "end": 22,
            "file": "<test>"
          }
        }
      }
    }
  ]
}
