crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_function_call.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 4,
  "items": [
    {
      "Function": {
        "name": {
          "name": "greet",
          "span": {
            "start": 4,
            "end": 9,
            "file": "<test>"
          }
        },
        "type_params": [],
        "params": [
          {
            "name": {
              "name": "name",
              "span": {
                "start": 10,
                "end": 14,
                "file": "<test>"
              }
            },
            "type_ref": {
              "Named": [
                "string",
                {
                  "start": 16,
                  "end": 22,
                  "file": "<test>"
                }
              ]
            },
            "ownership": null,
            "span": {
              "start": 10,
              "end": 22,
              "file": "<test>"
            }
          }
        ],
        "return_type": {
          "Named": [
            "string",
            {
              "start": 27,
              "end": 33,
              "file": "<test>"
            }
          ]
        },
        "return_ownership": null,
        "predicate": null,
        "body": {
          "statements": [
            {
              "Return": {
                "value": {
                  "Identifier": {
                    "name": "name",
                    "span": {
                      "start": 47,
                      "end": 51,
                      "file": "<test>"
                    }
                  }
                },
                "span": {
                  "start": 40,
                  "end": 52,
                  "file": "<test>"
                }
              }
            }
          ],
          "tail_expr": null,
          "span": {
            "start": 34,
            "end": 54,
            "file": "<test>"
          }
        },
        "span": {
          "start": 1,
          "end": 54,
          "file": "<test>"
        }
      }
    },
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "uses_deprecated_var": false,
          "name": {
            "name": "msg",
            "span": {
              "start": 59,
              "end": 62,
              "file": "<test>"
            }
          },
          "type_ref": {
            "Named": [
              "string",
              {
                "start": 64,
                "end": 70,
                "file": "<test>"
              }
            ]
          },
          "init": {
            "Call": {
              "callee": {
                "Identifier": {
                  "name": "greet",
                  "span": {
                    "start": 73,
                    "end": 78,
                    "file": "<test>"
                  }
                }
              },
              "args": [
                {
                  "Literal": [
                    {
                      "String": "world"
                    },
                    {
                      "start": 79,
                      "end": 86,
                      "file": "<test>"
                    }
                  ]
                }
              ],
              "span": {
                "start": 73,
                "end": 87,
                "file": "<test>"
              }
            }
          },
          "span": {
            "start": 55,
            "end": 88,
            "file": "<test>"
          }
        }
      }
    }
  ]
}
