crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_function_declaration.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 5,
  "items": [
    {
      "Function": {
        "name": {
          "name": "add",
          "span": {
            "start": 4,
            "end": 7,
            "file": "<test>"
          }
        },
        "visibility": "Private",
        "attributes": [],
        "is_async": false,
        "type_params": [],
        "params": [
          {
            "name": {
              "name": "a",
              "span": {
                "start": 15,
                "end": 16,
                "file": "<test>"
              }
            },
            "type_ref": {
              "Named": [
                "number",
                {
                  "start": 18,
                  "end": 24,
                  "file": "<test>"
                }
              ]
            },
            "ownership": "Borrow",
            "ownership_explicit": true,
            "mutable": false,
            "default_value": null,
            "is_rest": false,
            "span": {
              "start": 8,
              "end": 24,
              "file": "<test>"
            }
          },
          {
            "name": {
              "name": "b",
              "span": {
                "start": 33,
                "end": 34,
                "file": "<test>"
              }
            },
            "type_ref": {
              "Named": [
                "number",
                {
                  "start": 36,
                  "end": 42,
                  "file": "<test>"
                }
              ]
            },
            "ownership": "Borrow",
            "ownership_explicit": true,
            "mutable": false,
            "default_value": null,
            "is_rest": false,
            "span": {
              "start": 26,
              "end": 42,
              "file": "<test>"
            }
          }
        ],
        "return_type": {
          "Named": [
            "number",
            {
              "start": 45,
              "end": 51,
              "file": "<test>"
            }
          ]
        },
        "return_ownership": null,
        "predicate": null,
        "body": {
          "statements": [
            {
              "Return": {
                "value": {
                  "Binary": {
                    "op": "Add",
                    "left": {
                      "Identifier": {
                        "name": "a",
                        "span": {
                          "start": 65,
                          "end": 66,
                          "file": "<test>"
                        }
                      }
                    },
                    "right": {
                      "Identifier": {
                        "name": "b",
                        "span": {
                          "start": 69,
                          "end": 70,
                          "file": "<test>"
                        }
                      }
                    },
                    "span": {
                      "start": 65,
                      "end": 70,
                      "file": "<test>"
                    }
                  }
                },
                "span": {
                  "start": 58,
                  "end": 71,
                  "file": "<test>"
                }
              }
            }
          ],
          "tail_expr": null,
          "span": {
            "start": 52,
            "end": 73,
            "file": "<test>"
          }
        },
        "span": {
          "start": 1,
          "end": 73,
          "file": "<test>"
        }
      }
    }
  ]
}
