crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_if_statement.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 2,
  "items": [
    {
      "Statement": {
        "If": {
          "cond": {
            "Literal": [
              {
                "Bool": true
              },
              {
                "start": 5,
                "end": 9
              }
            ]
          },
          "then_block": {
            "statements": [
              {
                "VarDecl": {
                  "mutable": false,
                  "uses_deprecated_var": false,
                  "name": {
                    "name": "x",
                    "span": {
                      "start": 21,
                      "end": 22
                    }
                  },
                  "type_ref": {
                    "Named": [
                      "number",
                      {
                        "start": 24,
                        "end": 30
                      }
                    ]
                  },
                  "init": {
                    "Literal": [
                      {
                        "Number": 1.0
                      },
                      {
                        "start": 33,
                        "end": 34
                      }
                    ]
                  },
                  "span": {
                    "start": 17,
                    "end": 35
                  }
                }
              }
            ],
            "tail_expr": null,
            "span": {
              "start": 11,
              "end": 37
            }
          },
          "else_block": null,
          "span": {
            "start": 1,
            "end": 37
          }
        }
      }
    }
  ]
}
