crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_simple_literal.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 2,
  "items": [
    {
      "Statement": {
        "Expr": {
          "expr": {
            "Literal": [
              {
                "Number": 42.0
              },
              {
                "start": 0,
                "end": 2,
                "file": "<test>"
              }
            ]
          },
          "span": {
            "start": 0,
            "end": 3,
            "file": "<test>"
          }
        }
      }
    }
  ]
}
