crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_string_literal.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 2,
  "items": [
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "uses_deprecated_var": false,
          "name": {
            "name": "msg",
            "span": {
              "start": 4,
              "end": 7,
              "file": "<test>"
            }
          },
          "type_ref": {
            "Named": [
              "string",
              {
                "start": 9,
                "end": 15,
                "file": "<test>"
              }
            ]
          },
          "init": {
            "Literal": [
              {
                "String": "hello"
              },
              {
                "start": 18,
                "end": 25,
                "file": "<test>"
              }
            ]
          },
          "span": {
            "start": 0,
            "end": 26,
            "file": "<test>"
          }
        }
      }
    }
  ]
}
