crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_variable_declaration.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 2,
  "items": [
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "uses_deprecated_var": false,
          "name": {
            "name": "x",
            "span": {
              "start": 4,
              "end": 5
            }
          },
          "type_ref": {
            "Named": [
              "number",
              {
                "start": 7,
                "end": 13
              }
            ]
          },
          "init": {
            "Literal": [
              {
                "Number": 42.0
              },
              {
                "start": 16,
                "end": 18
              }
            ]
          },
          "span": {
            "start": 0,
            "end": 19
          }
        }
      }
    }
  ]
}
