crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_while_loop.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 2,
  "items": [
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "uses_deprecated_var": false,
          "name": {
            "name": "i",
            "span": {
              "start": 5,
              "end": 6,
              "file": "<test>"
            }
          },
          "type_ref": {
            "Named": [
              "number",
              {
                "start": 8,
                "end": 14,
                "file": "<test>"
              }
            ]
          },
          "init": {
            "Literal": [
              {
                "Number": 0.0
              },
              {
                "start": 17,
                "end": 18,
                "file": "<test>"
              }
            ]
          },
          "span": {
            "start": 1,
            "end": 19,
            "file": "<test>"
          }
        }
      }
    },
    {
      "Statement": {
        "While": {
          "cond": {
            "Binary": {
              "op": "Lt",
              "left": {
                "Identifier": {
                  "name": "i",
                  "span": {
                    "start": 27,
                    "end": 28,
                    "file": "<test>"
                  }
                }
              },
              "right": {
                "Literal": [
                  {
                    "Number": 10.0
                  },
                  {
                    "start": 31,
                    "end": 33,
                    "file": "<test>"
                  }
                ]
              },
              "span": {
                "start": 27,
                "end": 33,
                "file": "<test>"
              }
            }
          },
          "body": {
            "statements": [
              {
                "Assign": {
                  "target": {
                    "Name": {
                      "name": "i",
                      "span": {
                        "start": 41,
                        "end": 42,
                        "file": "<test>"
                      }
                    }
                  },
                  "value": {
                    "Binary": {
                      "op": "Add",
                      "left": {
                        "Identifier": {
                          "name": "i",
                          "span": {
                            "start": 45,
                            "end": 46,
                            "file": "<test>"
                          }
                        }
                      },
                      "right": {
                        "Literal": [
                          {
                            "Number": 1.0
                          },
                          {
                            "start": 49,
                            "end": 50,
                            "file": "<test>"
                          }
                        ]
                      },
                      "span": {
                        "start": 45,
                        "end": 50,
                        "file": "<test>"
                      }
                    }
                  },
                  "span": {
                    "start": 41,
                    "end": 51,
                    "file": "<test>"
                  }
                }
              }
            ],
            "tail_expr": null,
            "span": {
              "start": 35,
              "end": 53,
              "file": "<test>"
            }
          },
          "span": {
            "start": 20,
            "end": 53,
            "file": "<test>"
          }
        }
      }
    }
  ]
}
